rust/src/openvasd/api_tests/snapshots/notus POST __notus__test.snap
---
source: src/openvasd/api_tests/test_builder.rs
expression: inner
---
{
  "status_code": 200,
  "headers": {
    "api-version": "1",
    "authentication": "disabled",
    "content-length": "150",
    "content-type": "application/json",
    "date": "[redacted]",
    "feed-version": "[redacted]",
  },
  "body": "{\"1.3.6.1.4.1.25623.1.1.1.2.2024.3731\":[{\"name\":\"man-db\",\"installed_version\":\"1.1.1\",\"fixed_version\":{\"version\":\"2.8.5-2+deb10u1\",\"specifier\":\">=\"}}]}",
}
